# bluetooth-AoA-example

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  cla.md  data_format_sample.c  sonar-project.properties
.github/: CODEOWNERS  CONTRIBUTING.md  Docker_readme.md  PULL_REQUEST_TEMPLATE.md  build-docker-image.sh  build-with-docker.sh  uncrustify.cfg
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md
.github/workflows/: 00-Check-Code-Convention.yml  01-CLA-Assistant.yml  02-Build-Firmware.yml  03-SonarQube-Analysis.yml  04-TruffleHog-Security-Scan.yml  05-Trigger-SonarQube-test.yml  cla_signature.yml  precommit.yml  software_build_test.yml  sonarqube.yml
locator_host/: Makefile  app.c  app.h  app_log.h  locator_host.pintool  locator_host.slcp  locator_host.slps  main.c  readme.md  sl_system_config.h
locator_host/autogen/: gatt_db.c  gatt_db.h  linkerfile.ld  sl_bluetooth.c  sl_bluetooth.h  sl_component_catalog.h  sl_event_handler.c  sl_simple_com_isr.c  sl_uartdrv_init.c  sl_uartdrv_instances.h
locator_host/bt/: CMakeLists.txt
locator_host/bt/aoa/: CMakeLists.txt  README.txt  sl_bt_aoa.c  sl_bt_aoa.h
locator_host/bt/aoa/antenna_array/: antenna_array.c  antenna_array.h
locator_host/bt/aoa/aoa_angle/: aoa_angle.c  aoa_angle.h
locator_host/bt/aoa/aoa_angle/config/: aoa_angle_config.h
locator_host/bt/aoa/aoa_cte/: cte_conn.c  cte_conn_less.c  cte_silabs.c
locator_host/bt/aoa/aoa_cte/config/: aoa_cte_config.h
locator_host/bt/aoa/aoa_util/: aoa_serdes.c  aoa_serdes.h  aoa_topics.h  aoa_util.c
locator_host/bt/aoa/ncp_evt_filter/: sl_ncp_evt_filter.h
locator_host/config/: SEGGER_RTT_Conf.h  pin_config.h  sl_board_control_config.h  sl_debug_swo_config.h  sl_device_init_dpll_config.h  sl_device_init_hfxo_config.h  sl_device_init_lfxo_config.h  sl_driver_mvp_config.h  sl_memory_config.h  sl_mx25_flash_shutdown_usart_config.h  sl_ncp_host_com_config.h  sl_simple_com_config.h  sl_uartdrv_usart_exp_config.h  uartdrv_config.h
locator_host/config/btconf/: gatt_configuration.btconf
locator_host/drivers/: CMakeLists.txt  sl_timer.c  sl_timer.h  sl_watchdog.c  sl_watchdog.h
locator_host/gecko_sdk_4.4.1/platform/common/inc/: sl_common.h  sl_status.h
locator_host/gecko_sdk_4.4.1/platform/common/src/: sl_syscalls.c
locator_host/gecko_sdk_4.4.1/platform/emlib/inc/: em_acmp.h  em_cmu.h  em_core.h  em_dbg.h  em_gpcrc.h  em_gpio.h  em_i2c.h  em_iadc.h  em_ldma.h  em_msc.h  em_opamp.h  em_pcnt.h  em_prs.h  em_se.h  em_smu.h  em_timer.h  em_vdac.h  sli_em_cmu.h
locator_host/gecko_sdk_4.4.1/platform/emlib/src/: em_acmp.c  em_cmu.c  em_dbg.c  em_iadc.c  em_msc.c  em_opamp.c  em_pcnt.c  em_prs.c  em_rmu.c  em_timer.c  em_usart.c  em_vdac.c
locator_host/gecko_sdk_4.4.1/platform/peripheral/inc/: peripheral_sysrtc.h  peripheral_sysrtc_compat.h
locator_host/gecko_sdk_4.4.1/platform/peripheral/src/: peripheral_sysrtc.c
locator_host/gecko_sdk_4.4.1/protocol/bluetooth/inc/: sli_bt_api.h
locator_host/gecko_sdk_4.4.1/protocol/bluetooth/src/: sl_bt_ncp_host_api.c
locator_host/locator_host_cmake/: CMakeLists.txt  CMakePresets.json  locator_host.cmake  toolchain.cmake
locator_host/tools/mqtt_forwarder/: README.md  main.py  mqtt.py  requirements.txt  rtt_viewer.py
locator_ncp/: Makefile  app.c  app.h  create_bl_files.bat  create_bl_files.py  create_bl_files.sh  locator_ncp.pintool  locator_ncp.slcp  locator_ncp.slps  readme.md
locator_ncp/autogen/: linkerfile.ld  sl_bluetooth.c  sl_component_catalog.h  sl_event_handler.c  sl_power_manager_handler.c  sl_simple_com_isr.c
locator_ncp/config/: btl_interface_cfg_s2c2.h  pin_config.h  sl_bluetooth_advertiser_config.h  sl_bluetooth_config.h  sl_bluetooth_periodic_sync_config.h  sl_board_control_config.h  sl_bt_dynamic_gattdb_config.h  sl_bt_periodic_advertiser_config.h  sl_device_init_lfxo_config.h  sl_memory_config.h  sl_mx25_flash_shutdown_usart_config.h  sl_ncp_config.h  sl_ncp_evt_filter_config.h  sl_rail_util_aox_config.h  sl_simple_com_config.h  sl_uartdrv_usart_vcom_config.h
locator_ncp/gecko_sdk_4.4.1/platform/bootloader/api/: application_properties.h  btl_errorcode.h  btl_interface.c  btl_interface.h  btl_interface_parser.h  btl_interface_storage.c  (+2 more)
locator_ncp/locator_ncp_cmake/: CMakeLists.txt  CMakePresets.json  locator_ncp.cmake  toolchain.cmake
tools/: README.md  uncrustify.cfg
tools/.codespell/: ignore-words.txt
(+386 files in other folders)
